[FRONT] display cancelled certification

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -254,6 +254,9 @@
                 },
                 "not-published": {
                     "title": "Results pending"
+                },
+                "cancelled": {
+                    "title": "Certification cancelled"
                 }
             }
         },
