Modify the structure of the scss and change the color when validate button is loading

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -301,6 +301,7 @@
       "title": "Question {stepNumber} of {totalChallengeNumber}",
       "actions": {
         "continue": "Continue",
+        "go-to-next": "and go to the next question",
         "skip": "Skip",
         "validate": "Validate"
       },
