Add last translation

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -281,6 +281,9 @@
         "text": "You have no certifications yet."
       },
       "statuses": {
+        "cancelled": {
+          "title": "Certification cancelled"
+        },
         "fail": {
           "title": "Certification not awarded",
           "action": "details"
